	- AI can now make use of non-DynamicRadar radars for missile targeting when being actively targeted by incoming anti-radiation ordinance.
	- AI can now do non-linear evasion vs long-range targets while aiming missiles.
	- Add Extend Min Gain Rate slider to set extend abort condition if not gaining distance fast enough.
- UI:
	- Improve prevention of click-through of various windows in the editor.
	- Open sections of the AI GUI now remain open when switching between flight and editor.
	- Competition UI text in the upper left corner now properly scales when adjusting UI_SCALE.
	- Add ability to set teams' Allies to the Team Selector GUI.
- Detectors:
	- Fix AI not popping countermeasures for non-radar incoming missiles detected by RWR but outside visual range.
	- Add fieldOfView setting to RadarWarningReceiver to allow custom RWR FoV.
	- RWR FoV no longer clamped to visual FOV.
-Countermeasures:
	- Fix NRE from countermeasure droppers missing a ejectTransform in the .cfg.
	- Fix Acousic Decoy launcher launch direction.
	- Fix Bubble Curtain launcher NRE.
	- 'Infinite Ordinance' now applies to Countermeasure droppers.
	- Adjust cmThreshold timing for SLW countermeasures to account for torpedoes being substantially slower than missiles.
- Weapons:
	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
	- Weapons will now properly report Ammo Depleted when ammo remaining is less than amount required to fire.
	- Fix weapons refusing to fire when one shot left when using multiple ammo boxes with differing starting ammo amounts due to floating point errors.
	- Explosive beehive submunition explosion FX now scaled based on submunition tntMass, not parent HE VFX.
	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.